<resources>
    <string name="app_name">Time logger</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_request_permissions">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="app_require_fine_location">This application does not work without the permission to access to access your location.</string>
    <string name="app_require_background_location">This application does not work without the permission to access to access your location in the background. Your information will not be sold to advertisers.</string>
    <string name="allow_foreground_location">Allow Location</string>
    <string name="allow_background_location">Allow Background Location</string>
    <string name="overview_window_title">Overview</string>
    <string name="map_icon">Map icon</string>
    <string name="please_sign_in">This application requires you to be logged in to utilize all of its features. Please sign in or sign up.</string>
    <string name="sign_in">Sign in</string>
    <string name="retrieval_firebase_unsuccessful">Retrieval-firebase-task was unsuccessful</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="required_field">Required field</string>
    <string name="hourly_wage">hourly wage</string>
    <string name="set_geofence">set geofence</string>
    <string name="title_activity_maps">Map</string>
    <string name="confirm_work_location">Confirm work location</string>
    <string name="properties_circle">properties circle</string>
    <string name="fill_hue">fill hue</string>
    <string name="fill_alpha">fill alpha</string>
    <string name="stroke_width">stroke width</string>
    <string name="stroke_hue">stroke hue</string>
    <string name="stroke_alpha">stroke alpha</string>
    <string name="stroke_pattern">stroke pattern</string>
    <string name="clickable">clickable</string>
    <string name="pattern_solid">patternSolid</string>
    <string name="pattern_dashed">patternDashed</string>
    <string name="pattern_dotted">patternDotted</string>
    <string name="pattern_mixed">patternMixed</string>
    <string name="geofences">geofences</string>
    <string name="users">users</string>
    <string name="map">Map</string>
    <string name="me">Me</string>
    <string name="location_services_must_be_enabled">Location services must be enabled for this app to work</string>
    <string name="error_getting_location_settings_resolution">\"Error getting location settings resolution %s"</string>
    <string name="geofence_entered">Geofence entered</string>
    <string name="no_geofence_trigger_found">No geofence trigger found!</string>
    <string name="geofence_added">Geofence added</string>
    <string name="geofence_not_added">Geofence was not added</string>
</resources>