<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.CapstoneProject.LinearLayout.Fragment"
    tools:context=".ui.main.UserInfoFragment">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Theme.CapstoneProject.TextInputLayout.OutlinedBox.Required"
        android:hint="@string/first_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstName"
            style="@style/Theme.CapstoneProject.DefaultDimens" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Theme.CapstoneProject.TextInputLayout.OutlinedBox.Required"
        android:hint="@string/last_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastName"
            style="@style/Theme.CapstoneProject.DefaultDimens" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Theme.CapstoneProject.TextInputLayout.OutlinedBox.Required"
        android:hint="@string/hourly_wage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hourlyWage"
            style="@style/Theme.CapstoneProject.DefaultDimens"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSetGeofence"
        style="@style/Theme.CapstoneProject.Button"
        android:text="@string/set_geofence" />


</LinearLayout>